{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 294,
  "lineage": "ae02641a-5196-7895-cc8f-8dc70a9e7830",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "webapp-ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:loadbalancer/webapp-lb-tf",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-lb-tf-2038912607.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webapp-lb-tf",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webapp-lb-tf",
            "security_groups": [
              "sg-06642b568b55fb46b"
            ],
            "source_security_group": "417239418930/allow_port_80_LB",
            "source_security_group_id": "sg-06642b568b55fb46b",
            "subnets": [
              "subnet-088cc36192eeca112",
              "subnet-0f55964436a4d4960"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Webapp"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_port80_LB",
            "aws_subnet.subnet-1a",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0517e4d829c990509",
            "arn": "arn:aws:ec2:ap-south-1:417239418930:instance/i-0ad3b375fa84a6d07",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad3b375fa84a6d07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-machine-on-aws-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03aee6015673b377f",
            "private_dns": "ip-10-10-1-39.ap-south-1.compute.internal",
            "private_ip": "10.10.1.39",
            "public_ip": "13.235.134.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a1285f7a6e5ca93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088cc36192eeca112",
            "tags": {
              "Name": "webapp-1a"
            },
            "tags_all": {
              "Name": "webapp-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e15af055d004cc8a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1a",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0517e4d829c990509",
            "arn": "arn:aws:ec2:ap-south-1:417239418930:instance/i-0372e5f0abfc5e048",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0372e5f0abfc5e048",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-machine-on-aws-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a5a69dc686ee975",
            "private_dns": "ip-10-10-2-162.ap-south-1.compute.internal",
            "private_ip": "10.10.2.162",
            "public_ip": "13.233.193.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fb7149ca90de979",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f55964436a4d4960",
            "tags": {
              "Name": "webapp-1b"
            },
            "tags_all": {
              "Name": "webapp-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e15af055d004cc8a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1b-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0517e4d829c990509",
            "arn": "arn:aws:ec2:ap-south-1:417239418930:instance/i-0163fdd033b031a4b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0163fdd033b031a4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-machine-on-aws-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-051d1a27ef4a8ab9e",
            "private_dns": "ip-10-10-2-142.ap-south-1.compute.internal",
            "private_ip": "10.10.2.142",
            "public_ip": "43.204.218.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e24627590b028443",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f55964436a4d4960",
            "tags": {
              "Name": "webapp-1b-1"
            },
            "tags_all": {
              "Name": "webapp-1b-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e15af055d004cc8a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:internet-gateway/igw-0996c959df8cb2c76",
            "id": "igw-0996c959df8cb2c76",
            "owner_id": "417239418930",
            "tags": {
              "Name": "webapp-IG"
            },
            "tags_all": {
              "Name": "webapp-IG"
            },
            "vpc_id": "vpc-032f104951058144b"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784",
            "arn_suffix": "targetgroup/webapptargetgroup/f2b27b1fbd870784",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webapptargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032f104951058144b"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_webapp-1-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784-20220715022242612200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784",
            "target_id": "i-0ad3b375fa84a6d07"
          },
          "dependencies": [
            "aws_instance.webapp-1a",
            "aws_lb_target_group.target_group_webapp",
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1a",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_webapp-2-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784-20220715022233009300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784",
            "target_id": "i-0372e5f0abfc5e048"
          },
          "dependencies": [
            "aws_instance.webapp-1b",
            "aws_lb_target_group.target_group_webapp",
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_webapp-4-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784-20220715022243001200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:417239418930:targetgroup/webapptargetgroup/f2b27b1fbd870784",
            "target_id": "i-0163fdd033b031a4b"
          },
          "dependencies": [
            "aws_instance.webapp-1b-1",
            "aws_lb_target_group.target_group_webapp",
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:route-table/rtb-0deca350eb85b4033",
            "id": "rtb-0deca350eb85b4033",
            "owner_id": "417239418930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0996c959df8cb2c76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f104951058144b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-IG",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0617128a05bde62b7",
            "route_table_id": "rtb-0deca350eb85b4033",
            "subnet_id": "subnet-088cc36192eeca112"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IG",
            "aws_route_table.Public_RT",
            "aws_subnet.subnet-1a",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7069d3e9b1e5634",
            "route_table_id": "rtb-0deca350eb85b4033",
            "subnet_id": "subnet-0f55964436a4d4960"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IG",
            "aws_route_table.Public_RT",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:security-group/sg-0e15af055d004cc8a",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e15af055d004cc8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port_80",
            "name_prefix": "",
            "owner_id": "417239418930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f104951058144b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port80_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:security-group/sg-06642b568b55fb46b",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-06642b568b55fb46b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port_80_LB",
            "name_prefix": "",
            "owner_id": "417239418930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-032f104951058144b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:subnet/subnet-088cc36192eeca112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088cc36192eeca112",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "417239418930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1a-webapp"
            },
            "tags_all": {
              "Name": "Subnet-1a-webapp"
            },
            "vpc_id": "vpc-032f104951058144b"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:subnet/subnet-0f55964436a4d4960",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f55964436a4d4960",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "417239418930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1b-webapp"
            },
            "tags_all": {
              "Name": "Subnet-1b-webapp"
            },
            "vpc_id": "vpc-032f104951058144b"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:subnet/subnet-0959d3206526f818c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0959d3206526f818c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "417239418930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1c-webapp"
            },
            "tags_all": {
              "Name": "Subnet-1c-webapp"
            },
            "vpc_id": "vpc-032f104951058144b"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:417239418930:vpc/vpc-032f104951058144b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-012707a877dbcf288",
            "default_route_table_id": "rtb-011c7c1caa8b573f5",
            "default_security_group_id": "sg-047f2f730f38d4a8b",
            "dhcp_options_id": "dopt-0808ff3d5ab86fd8b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-032f104951058144b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011c7c1caa8b573f5",
            "owner_id": "417239418930"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}